# smarc_simulations

./: .gitignore  LICENSE  README.md
small_smarc_auv/: CMakeLists.txt  package.xml
small_smarc_auv/launch/: upload_small_smarc_auv.launch
small_smarc_auv/robots/: small_smarc_auv_default.urdf.xacro
small_smarc_auv/urdf/: small_smarc_auv_base.urdf.xacro
smarc_auvs/: CMakeLists.txt  package.xml
smarc_auvs/models/example_auv/launch/: upload_example_auv.launch
smarc_auvs/models/example_auv/mesh/: Fin.dae  Propeller.dae
smarc_auvs/models/example_auv/robots/: example_auv_default.urdf.xacro
smarc_auvs/models/example_auv/urdf/: example_auv_base.urdf.xacro
smarc_auvs/models/large_smarc_auv/launch/: upload_large_smarc_auv.launch
smarc_auvs/models/large_smarc_auv/robots/: large_smarc_auv_default.urdf.xacro
smarc_auvs/models/large_smarc_auv/urdf/: large_smarc_auv_base.urdf.xacro
smarc_auvs/models/lolo_auv/: README.md
smarc_auvs/models/lolo_auv/launch/: upload_lolo_auv.launch
smarc_auvs/models/lolo_auv/robots/: lolo_auv_default.urdf.xacro
smarc_auvs/models/lolo_auv/urdf/: lolo_auv_base.urdf.xacro
smarc_auvs/models/sam_auv/: README.md
smarc_auvs/models/sam_auv/config/: controllers.yaml
smarc_auvs/models/sam_auv/launch/: upload_sam_auv.launch
smarc_auvs/models/sam_auv/robots/: sam_auv_default.urdf.xacro
smarc_auvs/models/sam_auv/urdf/: sam_auv_base.urdf.xacro
smarc_auvs/models/small_smarc_auv/launch/: upload_small_smarc_auv.launch
smarc_auvs/models/small_smarc_auv/robots/: small_smarc_auv_default.urdf.xacro
smarc_auvs/models/small_smarc_auv/urdf/: small_smarc_auv_base.urdf.xacro
smarc_auvs/rviz/: example_auv.rviz  lolo_auv.rviz  sam_auv.rviz
smarc_gazebo_plugins/smarc_gazebo_plugins/: CMakeLists.txt  package.xml
smarc_gazebo_plugins/smarc_gazebo_plugins/include/smarc_gazebo_plugins/: PopulationIntensities.hh  PopulationIntensitiesPrv.hh  SemanticMultiRayShape.hh  UnderwaterSonarPlugin.hh  UnderwaterSonarSensor.hh  UnderwaterSonarSensorPrivate.hh
smarc_gazebo_plugins/smarc_gazebo_plugins/src/: PopulationIntensities.cc  RegisterUnderwaterSonarSensor.cc  SemanticMultiRayShape.cc  UnderwaterSonarPlugin.cc  UnderwaterSonarSensor.cc
smarc_gazebo_plugins/smarc_gazebo_ros_plugins/: CMakeLists.txt  package.xml
smarc_gazebo_plugins/smarc_gazebo_ros_plugins/include/smarc_gazebo_ros_plugins/: gazebo_ros_image_sonar.h  gazebo_ros_underwater_sonar.h  gazebo_ros_underwater_sonar_ray.h
smarc_gazebo_plugins/smarc_gazebo_ros_plugins/msg/: SonarEntities.msg
smarc_gazebo_plugins/smarc_gazebo_ros_plugins/src/: gazebo_ros_image_sonar.cpp  gazebo_ros_underwater_sonar.cpp  gazebo_ros_underwater_sonar_ray.cpp
smarc_sensor_plugins/smarc_sensor_plugins_ros/: CMakeLists.txt  package.xml
smarc_sensor_plugins/smarc_sensor_plugins_ros/launch/: waterfall.launch
smarc_sensor_plugins/smarc_sensor_plugins_ros/src/: combine_waterfalls_node.cpp  sidescan_waterfall_image_node.cpp
smarc_sensor_plugins/smarc_sensor_plugins_ros/urdf/: sonar_snippets.xacro
smarc_simulated_comms/: CMakeLists.txt  README.md  package.xml
smarc_simulated_comms/launch/: smarc_simulated_comms.launch
smarc_simulated_comms/scripts/: comms_master.py  comms_tester.py
smarc_worlds/: CMakeLists.txt  package.xml
smarc_worlds/launch/: ekf_localization_tests.launch  pipe_following.launch  pool_world.launch  random_rocks.launch  skytteren.launch  sonar_intensities.launch
smarc_worlds/pool/: model.sdf
smarc_worlds/world_models/duck/: model.sdf
smarc_worlds/world_models/dummy_laser/: model.config  model.sdf
smarc_worlds/world_models/large_rock/: model.config  model.sdf
smarc_worlds/world_models/large_rock/meshes/: large_rock.dae  large_rock_collision.stl
smarc_worlds/world_models/pipeline/: model.config  model.sdf
smarc_worlds/world_models/pipeline/meshes/: pipeline.dae  pipeline_collision.stl
smarc_worlds/world_models/sand_heightmap_pipe/: model.sdf
smarc_worlds/world_models/skytteren/: model.sdf
smarc_worlds/world_models/skytteren/meshes/: skytteren_repaired.dae
smarc_worlds/world_models/small_ocean_box/: model.config  model.sdf
smarc_worlds/worlds/: ekf_scenario_1.world  pipe_following.world  pool.world  random_rocks.world  rocks_line.world  rocks_random.world  skytteren.world  sonar_intensities.world
underwater_envs/: CMakeLists.txt  package.xml
underwater_envs/launch/: lake.launch  pipe_following.launch  skytteren.launch  underwater_world.launch
underwater_envs/world_models/sand_heightmap_pipe/: model.config
underwater_envs/world_models/skytteren/: model.config  model.sdf
underwater_envs/worlds/: empty_underwater.world  lake.world
