<?xml version="1.0"?>
<package>
  <name>smarc_worlds</name>
  <version>0.0.0</version>
  <description>The underwater_envs package</description>

  <maintainer email="nacho@todo.todo">nacho</maintainer>


  <license>TODO</license>

 <buildtool_depend>catkin</buildtool_depend>

  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>message_to_tf</run_depend>
  <run_depend>uuv_sensor_ros_plugins</run_depend>
  <run_depend>uuv_gazebo_ros_plugins</run_depend>
  
  <export>
    <gazebo_ros gazebo_media_path="${prefix}"
                gazebo_model_path="${prefix}/world_models"/>
  </export>
</package>
